# crypto-aggregator

./: .gitignore  CMakeLists.txt  README.md  README.txt  docker-compose.yml
aggregator/: CMakeLists.txt
aggregator/include/: aggregator.h  binance_connector.h  bitget_connector.h  bybit_connector.h  connector.h  okx_connector.h
aggregator/src/: aggregator.cpp  binance_connector.cpp  bitget_connector.cpp  bybit_connector.cpp  connector.cpp  main.cpp  okx_connector.cpp
clients/: CMakeLists.txt
clients/bbo/: CMakeLists.txt  client_bbo.cpp
clients/price_bands/: CMakeLists.txt  client_price_bands.cpp
clients/volume_bands/: CMakeLists.txt  client_volume_bands.cpp
docker/: Dockerfile.aggregator  Dockerfile.base  Dockerfile.client-bbo  Dockerfile.client-pricebands  Dockerfile.client-volumebands
proto/: CMakeLists.txt  aggregator.proto
